# uav-croc-contest-2013

./: README.md  readme.txt
gazebo/materials/scripts/: CMakeLists.txt  croc.material
gazebo/models/: croc_parking.world
gazebo/models/croc_flyer_v1/: model.config  model.sdf  model_large.sdf  model_new.sdf
gazebo/models/croc_parking_ground_plane/: model.config  model.sdf
gazebo/models/croc_parking_landing_marker/: model.config  model.sdf
gazebo/models/croc_parking_range/: model.config  model.sdf
gazebo/models/hokuyo/: model-1_3.sdf  model.sdf
gazebo/models/takeoff_marker/: manifest.xml  model.sdf
gazebo/plugins/gazebo_camera_plugin/: CMakeLists.txt  ros_camera_plugin.cc
gazebo/plugins/gazebo_flyer_plugin/: CMakeLists.txt  ros_flyer_plugin.cc  wind.cpp
gazebo/plugins/gazebo_flyer_plugin/include/: mikoImu.h  wind.h  windParameters.h
gazebo/plugins/gazebo_lidar_plugin/: CMakeLists.txt  ros_lidar_plugin.cc
gazebo/plugins/gazebo_px4flow_plugin/: CMakeLists.txt  manifest.xml  ros_px4flow_plugin.cc
gazebo/plugins/gazebo_px4flow_plugin/include/: OpticalFlow.h
launch/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  map.yaml  robot.launch
ros_3rd_party/control_toolbox/src/control_toolbox/srv/: _SetPidGains.py
ros_3rd_party/px-ros-pkg/px_comm/src/px_comm/msg/: _OpticalFlow.py  __init__.py
ros_3rd_party/px-ros-pkg/px_hardware_interface/px4flow_node/launch/: px4flow_parameters.yaml
ros_3rd_party/px-ros-pkg/px_hardware_interface/px4flow_node/src/: SerialComm.cc
ros_croc/croc_CalcLandingPos/: CMakeLists.txt  mainpage.dox  manifest.xml
ros_croc/croc_CalcLandingPos/src/: main.cpp
ros_croc/croc_Pose3D/: CMakeLists.txt  mainpage.dox  manifest.xml
ros_croc/croc_Pose3D/include/: RunningMedian.h  croc_Pose3D.h
ros_croc/croc_Pose3D/msg/: Pose3D.msg
ros_croc/croc_Pose3D/src/: croc_Pose3D.cpp
ros_croc/croc_Pose3D/src/croc_Pose3D/msg/: _Pose3D.py  __init__.py
ros_croc/croc_command/: CMakeLists.txt  mainpage.dox  manifest.xml
ros_croc/croc_command/include/croc_command/: croc_command.h
ros_croc/croc_command/msg/: PID.msg  State.msg  mikoCmd.msg
ros_croc/croc_command/src/: croc_command.cpp
ros_croc/croc_command/src/croc_command/msg/: _PID.py  _State.py  __init__.py  _mikoCmd.py
ros_croc/croc_detecting_mark_3/: CMakeLists.txt  mainpage.dox  manifest.xml
ros_croc/croc_detecting_mark_3/include/croc_detecting_mark/: detecting_mark.h  ros_opencv_bridge.h
ros_croc/croc_detecting_mark_3/msg/: HSVrange.msg
ros_croc/croc_detecting_mark_3/src/: detecting_mark.cpp  main.cpp
ros_croc/croc_detecting_mark_3/src/croc_detecting_mark_3/msg/: _HSVrange.py  __init__.py
ros_croc/croc_log/: CMakeLists.txt  mainpage.dox  manifest.xml
ros_croc/croc_log/include/: croc_log.h
ros_croc/croc_log/src/: croc_log.cpp
ros_croc/croc_navi/: CMakeLists.txt  mainpage.dox  manifest.xml
ros_croc/croc_navi/include/: croc_navi.h
ros_croc/croc_navi/src/: croc_navi.cpp
ros_croc/cyphy_serial_driver/: CMakeLists.txt  manifest.xml
ros_croc/cyphy_serial_driver/include/: flightcontrol.h  serialinterface.h
ros_croc/cyphy_serial_driver/msg/: mikoImu.msg
ros_croc/cyphy_serial_driver/src/: .gitignore  flightcontrol.cpp  serial_interface.cpp
ros_croc/cyphy_serial_driver/src/MKSerial/msg/: __init__.py  _mikoCmd.py  _mikoImu.py
ros_croc/cyphy_serial_driver/src/cyphy_serial_driver/msg/: _mikoCmd.py  _mikoImu.py
ros_croc/cyphy_serial_driver/src/old/: flightcontrol.cpp  flightcontrol.h
ros_gs/croc_gs/: CMakeLists.txt  manifest.xml
ros_gs/croc_gs/include/: Pose3D.h  State.h  croc_gs.h  mikoCmd.h
ros_gs/croc_gs/msg/: windParameters.msg
ros_gs/croc_gs/src/: croc_gs.cpp  main.cpp
ros_gs/croc_gs/src/croc_gs/msg/: __init__.py  _windParameters.py
